force-app/main/default/objects/Contract_Signatory__c/Contract_Signatory__c.object-meta.xml
<CustomObject>
    <label>Contract Signatory</label>
    <nameField>
        <displayFormat>SIG-{0000}</displayFormat>
        <label>Contract Signatory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Signatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>