force-app/main/default/objects/Contract_Signatory__c/fields/Delegated_From__c.field-meta.xml
<CustomField>
    <fullName>Delegated_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delegated_Signatory_Records</relationshipName>
    <type>Lookup</type>
</CustomField>