force-app/main/default/objects/Contract_Signatory__c/fields/Signatory__c.field-meta.xml
<CustomField>
    <fullName>Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Signatory_Records</relationshipName>
    <type>Lookup</type>
</CustomField>