force-app/main/default/objects/Contract_Signatory__c/fields/Signatory_Role__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Role__c</fullName>
    <label>Signatory Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Senior VP</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>Branch ED</fullName>
            </value>
            <value>
                <fullName>Facilities ED</fullName>
            </value>
            <value>
                <fullName>Counterparty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>