force-app/main/default/objects/Contract_Signatory__c/fields/Signature_Order__c.field-meta.xml
<CustomField>
    <fullName>Signature_Order__c</fullName>
    <label>Signature Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>